--- a/components/landing/component.module.css
+++ b/components/landing/component.module.css
@@ -162,7 +162,6 @@
 }
 
 .thirdSection {
-  min-height: 100vh;
   padding-bottom: 6vw;
   padding-left: 6vw;
   padding-right: 6vw;
